# PoseidonVK

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
.agent/: AGENTS.md  Modern_Vulkan_Arma_2_Compatibility_Project.md  POSEIDON_ENGINE_MODERNIZATION_REPORT.md  POSEIDON_PHASE0_CLOSEOUT.md  PoseidonVK_integration_plan.md  agentinstructions.md
.github/: FUNDING.yml
.opencode/agent/: implementation.md
.zcode/plans/: plan-sess_9d56ac31-e715-48ab-8829-5418c143cdfe.md
apps/cwr/Game/: CMakeLists.txt  GameApplication.cpp
apps/cwr/GameDemo/: CMakeLists.txt
apps/tetris/Tetris/: CMakeLists.txt
cmake/: FindLLVMSanitizer.cmake  GenerateShaderHeader.cmake
engine/Poseidon/Core/: Application.hpp
engine/Poseidon/Foundation/Platform/: AppConfig.cpp
engine/Poseidon/Graphics/: GraphicsEngineFactory.cpp  GraphicsEngineFactory.hpp  IGraphicsEngine.hpp
engine/Poseidon/Graphics/Core/: Engine.hpp  RenderState.hpp
engine/Poseidon/Graphics/Dummy/: EngineDummy.cpp  EngineDummy.hpp
engine/Poseidon/Graphics/Rendering/: BuildRenderPassDescriptor.hpp  RenderPassDescriptor.hpp
engine/Poseidon/Graphics/Rendering/Draw/: FontDrawFreeType.cpp
engine/Poseidon/Graphics/Rendering/Font/: Pactext.cpp
engine/Poseidon/Graphics/Rendering/Frame/: BuildFrame.cpp  BuildFrame.hpp  Frame.hpp  FrameStats.hpp  RuntimeChecks.cpp  RuntimeChecks.hpp  SceneExtractor.cpp  SceneInputs.hpp  ValidateFrame.cpp  WorldFrameObserver.cpp
engine/Poseidon/Graphics/Rendering/Shape/: ClipShape.cpp  ShapeDraw.cpp
engine/Poseidon/Graphics/Textures/: TextureBank.hpp
engine/Poseidon/Input/: InputProcessingSdl.cpp  MouseState.hpp
engine/Poseidon/UI/: OptionsUI.cpp
engine/Poseidon/UI/InGame/: InGameUIMenuSim.cpp
engine/Poseidon/UI/Settings/: GraphicsApply.cpp
engine/Poseidon/World/: Viewer.cpp
engine/Poseidon/World/Scene/: SceneDraw.cpp
engine/Poseidon/World/Terrain/: Landscape.cpp  Landscape.hpp  LandscapeRender.cpp  TerrainCdlod.hpp
engine/PoseidonGL33/: CMakeLists.txt  EngineGL33.hpp  EngineGL33_2DRendering.cpp  EngineGL33_Draw.cpp  EngineGL33_Lifecycle.cpp  EngineGL33_Mesh.cpp  EngineGL33_Queue.cpp  EngineGL33_Shaders.cpp  EngineGL33_ShadowDepth.cpp  EngineGL33_State.cpp  EngineGL33_VertexBuffer.cpp  GLBlendState.hpp  GLBufferMap.hpp  GLClear.hpp  GLCullState.hpp  GLDepthStencilState.hpp  GLIndexBuffer.hpp  GLPipelineState.hpp  GLSampler.hpp  TextureGL33.hpp  TextureGL33_Init.cpp
engine/PoseidonGL33/Shaders/: psFlat.glsl  psNormal.glsl  psShadow.glsl  shadowDepthAlphaFS.glsl  shadowDepthAlphaVS.glsl  shadowDepthVS.glsl  vsScreen.glsl  vsShadow.glsl  vsTransform.glsl
engine/PoseidonVK/: BufferVK.cpp  BufferVK.hpp  CMakeLists.txt  DescriptorBindingsVK.hpp  DrawConstantsVK.hpp  EngineVK.cpp  EngineVK.hpp  EngineVK_Shadow.cpp  FrameConstantsVK.hpp  GpuSceneVK.hpp  GraphicsBackendVK.cpp  GraphicsBackendVK.hpp  MeshRegistryVK.hpp  PipelineCacheVK.hpp  RenderStateVK.hpp  SceneDrawCommandsVK.hpp  ScenePushConstantsVK.hpp  ScreenDrawRoutingVK.hpp  ScreenPushConstantsVK.hpp  TerrainVK.cpp  TerrainVK.hpp  TextBankVK.cpp  TextBankVK.hpp  TextureVK.cpp  TextureVK.hpp  VertexBufferVK.cpp  VertexBufferVK.hpp  VertexLayoutVK.hpp
engine/PoseidonVK/Shaders/: bootstrap_triangle.vert.glsl  cloud_composite.frag.glsl  cloud_density_erosion.comp.glsl  cloud_distance_field.comp.glsl  cloud_light_map.comp.glsl  cloud_temporal.frag.glsl  procedural_sky.frag.glsl  procedural_sky.vert.glsl  scene.frag.glsl  scene.vert.glsl  scene_cull.comp.glsl  screen.frag.glsl  screen.vert.glsl  shadowDepth.vert.glsl  shadowDepthAlpha.frag.glsl  shadowDepthAlpha.vert.glsl  sky_map_bake.frag.glsl  sky_map_bake.vert.glsl  terrain.frag.glsl  volumetric_clouds.frag.glsl  world_composite.frag.glsl
tests/unit/engine/Poseidon/: CMakeLists.txt
tests/unit/engine/Poseidon/Graphics/: test_backend_boundary_audit.cpp  test_buffer_usage_audit.cpp  test_gl_state_cache_audit.cpp  test_gl_state_ownership_audit.cpp  test_graphics_engine_factory.cpp  test_ibo_bind_audit.cpp  test_shader_named_outputs.cpp  test_vulkan_bootstrap_shaders.cpp  test_vulkan_descriptor_bindings.cpp  test_vulkan_frame_constants.cpp  test_vulkan_gpu_scene.cpp  test_vulkan_render_state.cpp  test_vulkan_scene_draw_commands.cpp  test_vulkan_scene_shaders.cpp
tests/unit/engine/Poseidon/Graphics/Rendering/: test_build_render_pass_descriptor.cpp  test_render_frame_build_frame.cpp  test_render_frame_invariants.cpp  test_render_frame_perf_budget.cpp  test_render_frame_runtime_checks.cpp  test_render_frame_stats.cpp
tests/unit/engine/Poseidon/UI/Settings/: test_presentation.cpp
tests/unit/engine/Poseidon/World/: test_terrain_cdlod.cpp
